--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Tricia's Data Science Blog
+subtitle: Where I grapple with new concepts and methodologies, publicly.
 use-site-title: true
 ---
 
