--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Tricia's Data Science Blog
-subtitle: Where I grapple with new concepts and methodologies, publicly.
+title: Hello, and welcome.
+subtitle: This is where I publicly grapple with understanding new concepts and methodologies.
 use-site-title: true
 ---
 
